Feature: Add data injection for tasks info
Add data injection for tasks info

Resolves: N/a
See also: N/a

--- a/src/app/card-list/card-list.component.html
+++ b/src/app/card-list/card-list.component.html
@@ -1,5 +1,5 @@
-<div *ngFor="let card of cards">
+<div *ngFor="let task of tasks">
   <h3>
-      {{ card.title }}
+      {{ task.title }}
   </h3>
 </div>
